<resources>
    <string name="app_name">Golfbook</string>
    <string name="connection">Connexion</string>
    <string name="ok">OK</string>
    <string name="name">Prénom</string>
    <string name="password">Mot de passe</string>
    <string name="rememberMe">Se souvenir de moi</string>
    <string name="createAccount">Pas encore de compte ? En créer un.</string>
    <string name="createAccountTitle">Inscription</string>
    <string name="lastName">Nom</string>
    <string name="players">Joueurs</string>
    <string name="games">Parties</string>
    <string name="tournaments">Tournois</string>
    <string name="courses">Parcours</string>
    <string name="username">Pseudo</string>
    <string name="name_and_dots">Prénom :</string>
    <string name="change_profile">Modifier mon profil</string>
    <string name="lastname_and_dots">Nom :</string>
    <string name="myStats">Mes statistiques</string>
    <string name="modify">Modification</string>
    <string name="numberOfHoles">%1$d trous</string>
    <string name="play">Jouer</string>
    <string name="bulletPointString">\u2022 %1$s</string>
    <string name="createCourse">Création de parcours</string>
    <string name="courseName">Nom du parcours</string>
    <string name="holes18">18 trous</string>
    <string name="holes9">9 trous</string>
    <string name="validate">valider</string>
    <string name="holeNumber">Trou n° %1$d : </string>
    <string name="createGame">Créer une nouvelle partie</string>
    <string name="or">OU</string>
    <string name="joinGame">Rejoindre la partie</string>
    <string name="gameCreation">Création de partie</string>
    <string name="gameName">Nom de la partie</string>
    <string name="coursesDots">Parcours :</string>
    <string name="create">Créer</string>
    <string name="defautlGameName">Partie du %1$s</string>
    <string name="start">Démarrer</string>
    <string name="scoringSystem">Formule de jeu</string>
    <string name="strokePlay">Stroke Play</string>
    <string name="stableFord">Stableford</string>
    <string name="matchPlay">Match Play</string>
    <string name="hole">Trou</string>
    <string name="out">Out</string>
    <string name="par">Par</string>
    <string name="net">Net</string>
    <string name="inString">In</string>
    <string name="hashtag">#</string>
    <string name="scoreNet">Score net</string>
    <string name="change_course">Modifier le parcours</string>
    <string name="createdAt">Créé le %1$s</string>
    <string name="gamesPlayed">Joué %1$d fois</string>
    <string name="coursePar">Par %1$d</string>
    <string name="modifyCourse">Modification de parcours</string>
    <string name="date">Date</string>
    <string name="addPlayer">Ajouter un joueur</string>
    <string name="gameStarting">La partie va commencer</string>
    <string name="accept">Accepter</string>
    <string name="refuse">Refuser</string>
    <string name="confirm">Confirmer</string>
    <string name="cancel">Annuler</string>
    <string name="playersReady">Joueurs prêts : %1$d sur %2$d</string>
    <string name="score">Score</string>
    <string name="scoringSystemDots">Formule de jeu :</string>
    <string name="playersDots">Joueurs :</string>
    <string name="what">Que souhaitez-vous voir ici ?</string>
    <string name="noGames">Vous n\'avez joué aucune partie pour l\'instant</string>
    <string name="networkError">Erreur réseau</string>
    <string name="refresh">Rafraîchir</string>
    <string name="noPendingGames">Aucune partie à rejoindre...</string>
    <string name="existing">Existant</string>
    <string name="newPlayer">Nouveau</string>
</resources>