<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@color/colorSecondary"
    android:alpha="0.0"
    tools:alpha="1">

    <TextView
        android:id="@+id/playerUsername"
        style="@style/TextAppearance.Golfbook.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="MindeurFou" />

    <ImageView
        android:id="@+id/imageAvatar"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:padding="20dp"
        tools:src="@drawable/man_4"
        android:background="@drawable/circle_shape"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameHint"
        style="@style/TextAppearance.Golfbook.h1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/name_and_dots"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageAvatar" />

    <TextView
        android:id="@+id/nameText"
        style="@style/TextAppearance.Golfbook.subtitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/nameHint"
        app:layout_constraintStart_toEndOf="@id/nameHint"
        app:layout_constraintTop_toTopOf="@id/nameHint"
        tools:text="Tanguy" />

    <TextView
        android:id="@+id/lastNameHint"
        style="@style/TextAppearance.Golfbook.h1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/lastname_and_dots"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameHint" />

    <TextView
        android:id="@+id/lastNameText"
        style="@style/TextAppearance.Golfbook.subtitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/lastNameHint"
        app:layout_constraintStart_toEndOf="@id/lastNameHint"
        app:layout_constraintTop_toTopOf="@id/lastNameHint"
        tools:text="Pouriel" />

    <TextView
        android:id="@+id/myStats"
        style="@style/TextAppearance.Golfbook.h1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/myStats"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lastNameHint" />

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="24dp"
        app:cardCornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@+id/modifyProfileButton"
        android:backgroundTint="@color/colorPrimaryVariant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myStats" />

    <Button
        android:id="@+id/modifyProfileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.Golfbook.Button.bright"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:text="@string/change_profile"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>